<resources>
    <string name="app_name">Sushi Plate Calculator</string>

    <string name="plate_bottom_total">Total:</string>
    <string name="plus_plate">Plus Plate</string>

    <string name="nav_plate_calculator">Plate Calculator</string>
    <string name="nav_settings">Settings</string>

    <string name="menu_clear_all">Clear All</string>

    <string name="toolbar_settings_title">Settings</string>



    <string name="pref_first_opened">pref_first</string>
    <string name="pref_animation">pref_animation</string>
    <string name="pref_green_plate">pref_green_plate_value</string>
    <string name="pref_blue_plate">pref_blue_plate_value</string>
    <string name="pref_purple_plate">pref_purple_plate_value</string>
    <string name="pref_orange_plate">pref_orange_plate_value</string>
    <string name="pref_pink_plate">pref_pink_plate_value</string>
    <string name="pref_gray_plate">pref_gray_plate_value</string>
    <string name="pref_gold_plate">pref_gold_plate_value</string>
    <string name="pref_sumo_plate">pref_sumo_plate_value</string>
    <string name="pref_black_plate">pref_black_plate_value</string>
    <string name="pref_discount">pref_discount</string>


    <string name="title_pref_green">Green</string>
    <string name="title_pref_blue">Blue</string>
    <string name="title_pref_purple">Purple</string>
    <string name="title_pref_orange">Orange</string>
    <string name="title_pref_pink">Pink</string>
    <string name="title_pref_gray">Gray</string>
    <string name="title_pref_gold">Gold</string>
    <string name="title_pref_sumo">Sumo</string>
    <string name="title_pref_black">Black</string>
    <string name="title_pref_animate">Animate</string>


    <string name="subtitle_pref_green">Default, £2.10</string>
    <string name="subtitle_pref_blue">Default, £2.80</string>
    <string name="subtitle_pref_purple">Default, £3.70</string>
    <string name="subtitle_pref_orange">Default, £4.20</string>
    <string name="subtitle_pref_pink">Default, £4.60</string>
    <string name="subtitle_pref_gray">Default, £5.20</string>
    <string name="subtitle_pref_gold">Default, £6.00</string>
    <string name="subtitle_pref_sumo">Default, £9.00</string>
    <string name="subtitle_pref_black">Default, £2.20</string>
    <string name="subtitle_pref_animate">Enable/Disable Animations</string>
    <string name="error">error</string>
    <string name="default_plate_value">£0</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="hint_plate_value">Plate Value</string>
    <string name="cat">Cat</string>
    <string name="category_plates">Plates</string>
    <string name="category_misc">Misc</string>
    <string name="discount_title">Discount:</string>
    <string name="dialog_discount_message">Enter you discount below</string>
    <string name="dialog_discount_title">Discount</string>
    <string name="hint_plate_discount">Discount</string>
    <string name="plate_discount_prefix">-</string>


</resources>
